--- a/mobileapp/config.sample.json
+++ b/mobileapp/config.sample.json
@@ -11,6 +11,8 @@
     "port": 3001
   },
   "couchdb": {
+    "user": "",
+    "password": "",
     "host": "127.0.0.1",
     "port": 5984,
     "database": "digitalfoosball"
