--- a/mobileapp/config.sample.json
+++ b/mobileapp/config.sample.json
@@ -22,6 +22,7 @@
     "visitors": "Visitors",
     "inverted": false
   },
+  "ruleset": "default",
   "twitter": {
     "userId": "",
     "consumerKey": "",
