added hashtag option for tweets

--- a/mobileapp/config.sample.json
+++ b/mobileapp/config.sample.json
@@ -26,6 +26,7 @@
   "ruleset": "default",
   "twitter": {
     "userId": "",
+    "hashtags": ["df"],
     "consumerKey": "",
     "consumerSecret": "",
     "accessToken": "",
