Improved locale processing by saving the locale files as json into the couch document

--- a/league/config.soca.json
+++ b/league/config.soca.json
@@ -1,8 +1,7 @@
 {
   "id": "league",
   "mapDirectories": {
-    "config.js":  false,
-    "config.json": "config",
+    "config.soca.json": false,
     "config.sample.json": false,
     "extensions": "_attachments/extensions",
     "finish-build.sh": false,
